Move search button to 30% from left to avoid player overlap

--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@ html, body {
   display: none;
   position: fixed;
   top: 16px;
-  left: 50%;
+  left: 30%;
   transform: translateX(-50%);
   width: 98px;
   height: 98px;
